fix(1.7.10): backport 1.1 core to Jabel and legacy build