@@ -37,6 +37,7 @@ public record ExperimentPlan(
         operations = (operations == null) ? Collections.emptyList() : Collections.unmodifiableList(Collections.unmodifiableList(new ArrayList<>(operations)));
         entityOperations = (entityOperations == null) ? Collections.emptyList() : Collections.unmodifiableList(Collections.unmodifiableList(new ArrayList<>(entityOperations)));
         blockEntityOperations = (blockEntityOperations == null) ? Collections.emptyList() : Collections.unmodifiableList(Collections.unmodifiableList(new ArrayList<>(blockEntityOperations)));
+        playerOperations = (playerOperations == null) ? Collections.emptyList() : Collections.unmodifiableList(Collections.unmodifiableList(new ArrayList<>(playerOperations)));
     }
 
     public ExperimentPlan(
@@ -49,7 +50,8 @@ public record ExperimentPlan(
             int estimatedDurationTicks,
             int uniqueChunksCount
     ) {
-        this(id, createdAtEpochMs, spec, operations, entityOperations, blockEntityOperations, List.of(), null, estimatedDurationTicks, uniqueChunksCount);
+        this(id, createdAtEpochMs, spec, operations, entityOperations, blockEntityOperations,
+                Collections.emptyList(), null, estimatedDurationTicks, uniqueChunksCount);
     }
 
     public ExperimentPlan(
@@ -75,7 +77,8 @@ public record ExperimentPlan(
             int estimatedDurationTicks,
             int uniqueChunksCount
     ) {
-        this(id, createdAtEpochMs, spec, operations, Collections.emptyList(), Collections.emptyList(), null, estimatedDurationTicks, uniqueChunksCount);
+        this(id, createdAtEpochMs, spec, operations, Collections.emptyList(), Collections.emptyList(),
+                Collections.emptyList(), null, estimatedDurationTicks, uniqueChunksCount);
     }
 
     public static ExperimentPlan forEntities(
@@ -86,7 +89,8 @@ public record ExperimentPlan(
             TargetPartition targetPartition,
             int estimatedDurationTicks
     ) {
-        return new ExperimentPlan(id, createdAtEpochMs, spec, Collections.emptyList(), entityOperations, Collections.emptyList(), targetPartition, estimatedDurationTicks, 0);
+        return new ExperimentPlan(id, createdAtEpochMs, spec, Collections.emptyList(), entityOperations,
+                Collections.emptyList(), Collections.emptyList(), targetPartition, estimatedDurationTicks, 0);
     }
 
     public static ExperimentPlan forEntities(
@@ -107,7 +111,8 @@ public record ExperimentPlan(
             TargetPartition targetPartition,
             int estimatedDurationTicks
     ) {
-        return new ExperimentPlan(id, createdAtEpochMs, spec, Collections.emptyList(), Collections.emptyList(), blockEntityOperations, targetPartition, estimatedDurationTicks, 0);
+        return new ExperimentPlan(id, createdAtEpochMs, spec, Collections.emptyList(), Collections.emptyList(),
+                blockEntityOperations, Collections.emptyList(), targetPartition, estimatedDurationTicks, 0);
     }
 
     public static ExperimentPlan forBlockEntities(
@@ -135,7 +140,7 @@ public record ExperimentPlan(
             List<ResolvedPlayerOperation> playerOperations,
             int estimatedDurationTicks
     ) {
-        return new ExperimentPlan(id, createdAtEpochMs, spec, List.of(), List.of(), List.of(),
-                playerOperations, null, estimatedDurationTicks, 0);
+        return new ExperimentPlan(id, createdAtEpochMs, spec, Collections.emptyList(), Collections.emptyList(),
+                Collections.emptyList(), playerOperations, null, estimatedDurationTicks, 0);
     }
 }
